syntax = "proto3";
// build 编译包名
option java_package = "com.r3inb.pb";
// build 类名
option java_outer_classname = "HelloOK";

option java_multiple_files = true;

package hello;

service Hello {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}