syntax = "proto3";
// build 编译包名
option java_package = "com.r3inb.pb";
// build 类名
option java_outer_classname = "Pics";

option java_multiple_files = true;

package pics;

service JPEG {
  rpc SendJPEG (stream JPEGRequest) returns (stream JPEGReply);
}

message JPEGReply {
  int32 length = 1;
}

message JPEGRequest {
  bytes data = 1;
}
